# fidax

./: .devcontainer.json  Dockerfile  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: publish_package.yml
src/fidax/: __init__.py  fid.py  inception.py  mifid.py  test_fid_metric.py  test_image_preprocessor.py  test_mifid_metric.py
src/fidax/models/: __init__.py  dinov2.py  inception.py
src/fidax/preprocessor/: image_preprocessor.py
